# gpu-bridge

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pytest.ini  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml  publish-cli.yml  publish-worker.yml
cli/: README.md  pyproject.toml
cli/gpu_tool/: api.py  config.py  main.py
controller/: Dockerfile  alembic.ini  requirements.txt
controller/alembic/: env.py
controller/alembic/versions/: 35757a668715_add_gpu_info_to_workers.py  4f50ea205f4b_initial_schema.py  5c179100a044_add_api_keys_table.py  79cd4eec260e_add_priority_and_nullable_worker_id.py
controller/app/: auth.py  config.py  crud.py  main.py  models.py  schemas.py
docs/: DEV_ENV.md  SPRINT_PLAN.md
examples/weather-train/: Dockerfile  train.py
scripts/: setup-worker.sh
tests/integration/: test_smoke.py
tests/unit/: test_controller.py  test_worker_executor.py
worker/: README.md  pyproject.toml
worker/gpu_worker/: config.py  executor.py  gpu_detect.py  main.py
