[project]
name = "gpu-tool"
version = "0.1.2"
description = "GPUBridge CLI — submit and monitor GPU jobs from your terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Amruth Vamshi", email = "battaamruth1@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.5",
    "httpx>=0.27.2",
]

[project.scripts]
gpu-tool = "gpu_tool.main:app"

[project.urls]
Homepage = "https://github.com/LIU-CS-691/gpu-bridge"
Repository = "https://github.com/LIU-CS-691/gpu-bridge"
Issues = "https://github.com/LIU-CS-691/gpu-bridge/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
